--- a/week-3/stylesheets/my-berkshire-stylesheet.css
+++ b/week-3/stylesheets/my-berkshire-stylesheet.css
@@ -41,6 +41,10 @@ h2:first-letter{
   font-size: xx-large;
 }
 
+*{
+  font-family: 'Libre Baskerville', serif;
+}
+
 span{
   text-transform: uppercase;
   font-size: xx-large;
